--- a/style.css
+++ b/style.css
@@ -4,14 +4,19 @@
   box-sizing: inherit;
 }
 
-body {
-  font-size: 62.5%;
+html {
   box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  display: grid;
+  grid-template-columns: 99.99vw;
 }
 
 .nav {
-  margin: 4rem;
-  margin-bottom: 5rem;
+  margin: 5rem;
+  margin-bottom: 6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,14 +28,14 @@ body {
 }
 @media (max-width: 960px) {
   .nav {
-    margin: 2rem;
+    margin: 3rem;
   }
 }
 .nav__list {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  width: 20rem;
+  width: 30rem;
 }
 @media (max-width: 600px) {
   .nav__list {
@@ -41,24 +46,24 @@ body {
 .header {
   display: grid;
   grid: max-content max-content/1fr 1fr;
-  margin: 4rem;
+  margin: 5rem;
 }
 @media (max-width: 960px) {
   .header {
-    margin: 2rem;
-    row-gap: 1.5rem;
+    margin: 3rem;
+    row-gap: 2.5rem;
   }
 }
 @media (max-width: 800px) {
   .header {
-    grid: auto/calc(100vw - 4rem);
+    grid: auto/calc(100vw - 6rem);
   }
 }
 .header__text-box {
   align-self: center;
 }
 .header__text-box--heading {
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 .header__button-box {
   grid-column: 1/2;
@@ -75,20 +80,19 @@ body {
   }
 }
 .header__input {
-  height: 2.5rem;
+  height: 5rem;
   width: 45%;
-  margin-right: 1rem;
+  margin-right: 2rem;
 }
 @media (max-width: 800px) {
   .header__input {
     margin-right: 0;
     width: 90%;
-    margin-bottom: 1rem;
-    padding-left: 37%;
+    margin-bottom: 2rem;
   }
 }
 .header__button {
-  height: 2.5rem;
+  height: 5rem;
   width: 30%;
 }
 @media (max-width: 800px) {
@@ -105,35 +109,35 @@ body {
 }
 
 .main {
-  margin: 4rem 0 0;
+  margin: 5rem 0 0;
   background-image: url(images/bg-curve-desktop.svg);
   background-size: cover;
   background-position: center;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  row-gap: 1.3rem;
-  -moz-column-gap: 2rem;
-       column-gap: 2rem;
+  row-gap: 2.3rem;
+  -moz-column-gap: 3rem;
+       column-gap: 3rem;
   align-items: center;
 }
 @media (max-width: 960px) {
   .main {
-    row-gap: 0.5rem;
+    row-gap: 1.5rem;
     justify-content: center;
   }
 }
 @media (max-width: 800px) {
   .main {
     grid: auto/calc(100vw - 6rem);
-    row-gap: 2rem;
+    row-gap: 3rem;
   }
 }
 .main > *:not(:last-child) {
-  margin-left: 4rem;
+  margin-left: 5rem;
 }
 @media (max-width: 960px) {
   .main > *:not(:last-child) {
-    margin-left: 2rem;
+    margin-left: 3rem;
   }
 }
 @media (max-width: 800px) {
@@ -142,7 +146,7 @@ body {
   }
 }
 .main__header {
-  margin-top: 4rem;
+  margin-top: 5rem;
 }
 @media (max-width: 800px) {
   .main__header {
@@ -159,7 +163,7 @@ body {
   .main__img-box {
     grid-column: 1/2;
     grid-row: 1/2;
-    margin-top: 2rem;
+    margin-top: 3rem;
   }
 }
 .main__img {
@@ -175,7 +179,7 @@ body {
 .main__link-box {
   display: flex;
   align-items: center;
-  margin-bottom: 0.8rem;
+  margin-bottom: 1.8rem;
 }
 @media (max-width: 800px) {
   .main__link-box {
@@ -183,12 +187,12 @@ body {
   }
 }
 .main__testimonial {
-  width: 20rem;
+  width: 30rem;
   background-color: #fff;
-  padding: 1.5rem;
-  margin-bottom: 4rem;
+  padding: 2.5rem;
+  margin-bottom: 5rem;
   display: grid;
-  row-gap: 0.8rem;
+  row-gap: 1.8rem;
 }
 @media (max-width: 800px) {
   .main__testimonial {
@@ -196,9 +200,9 @@ body {
   }
 }
 .main__testimonial--profile-box {
-  height: 3.2rem;
+  height: 4.2rem;
   display: grid;
-  grid: 1fr 1fr/3.2rem 1fr;
+  grid: 1fr 1fr/4.2rem 1fr;
 }
 .main__testimonial--profile-box .user-photo {
   grid-row: 1/3;
@@ -209,16 +213,16 @@ body {
 }
 
 .section {
-  padding: 3.5rem 3rem;
+  padding: 4.5rem 4rem;
   display: grid;
   grid: auto/1fr 1fr;
   -moz-column-gap: 12%;
        column-gap: 12%;
-  row-gap: 2rem;
+  row-gap: 3rem;
 }
 @media (max-width: 960px) {
   .section {
-    padding: 3.5rem 2rem;
+    padding: 4.5rem 3rem;
   }
 }
 @media (max-width: 800px) {
@@ -246,13 +250,13 @@ body {
 }
 
 .footer {
-  padding: 4rem;
+  padding: 5rem;
   display: grid;
-  row-gap: 2rem;
+  row-gap: 3rem;
 }
 @media (max-width: 960px) {
   .footer {
-    padding: 2rem;
+    padding: 3rem;
   }
 }
 .footer__nav {
@@ -264,14 +268,14 @@ body {
 @media (max-width: 700px) {
   .footer__nav {
     grid-auto-flow: row;
-    row-gap: 3rem;
+    row-gap: 4rem;
   }
 }
 .footer__nav--contact-box > * {
   display: grid;
   grid-template-columns: max-content 1fr;
-  -moz-column-gap: 0.5rem;
-       column-gap: 0.5rem;
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
   grid-auto-flow: column;
 }
 .footer__nav--contact-box > *:not(:last-child) {
@@ -279,7 +283,7 @@ body {
 }
 .footer__nav > *:not(:last-child) {
   display: grid;
-  grid-gap: 1rem;
+  grid-gap: 2rem;
 }
 
 :root {
@@ -293,18 +297,23 @@ body {
 
 .nav__list--item {
   font-family: "Raleway", sans-serif;
-  font-size: 1rem;
+  font-size: 2rem;
   text-decoration: none;
   list-style: none;
   transition: all 0.1s;
 }
 .nav__list--item:hover, .nav__list--item:active {
-  padding: 0.8rem;
+  padding: 1.8rem;
   background-color: rgba(119, 115, 115, 0.1);
   transform: translateY(-3px);
 }
 .nav__list--item a:link {
   text-decoration: none;
+}
+@media (max-width: 450px) {
+  .nav__list--item {
+    font-size: 1.5rem;
+  }
 }
 
 @media (max-width: 800px) {
@@ -320,23 +329,23 @@ body {
   font-family: "Raleway", sans-serif;
 }
 .main__link-box--link:link {
-  font-size: 1rem;
+  font-size: 2rem;
   color: var(--cyan);
-  margin-right: 0.5rem;
+  margin-right: 1.5rem;
 }
 .main__testimonial {
   box-shadow: 2px 2px 0.5rem rgba(0, 0, 0, 0.1);
 }
 .main__testimonial--profile-box .user-photo {
-  width: 2rem;
+  width: 3rem;
   border-radius: 100%;
 }
 .main__testimonial--profile-box .user-name {
   font-weight: bold;
-  font-size: 0.8rem;
+  font-size: 1.8rem;
 }
 .main__testimonial--profile-box .user-role {
-  font-size: 0.6rem;
+  font-size: 1.6rem;
 }
 
 .section {
@@ -356,19 +365,18 @@ body {
 }
 .section__input {
   width: 60%;
-  height: 2.5rem;
+  height: 5rem;
   display: block;
-  margin-bottom: 1rem;
-  padding-left: 0.8rem;
+  margin-bottom: 2rem;
+  padding-left: 1.8rem;
 }
 @media (max-width: 800px) {
   .section__input {
     width: 90%;
-    padding-left: 35%;
   }
 }
 .section__button {
-  height: 2.5rem;
+  height: 5rem;
   width: 30%;
 }
 @media (max-width: 800px) {
@@ -389,11 +397,11 @@ body {
 .footer__nav--list-link {
   text-decoration: none;
   color: currentColor;
-  font-size: 0.8rem;
+  font-size: 1.8rem;
 }
 .footer__nav--social-media-icon {
-  height: 1rem;
-  width: 1rem;
+  height: 2rem;
+  width: 2rem;
   cursor: pointer;
   box-sizing: content-box;
   padding: 3px;
@@ -402,19 +410,19 @@ body {
 }
 
 .heading-1 {
-  font-size: 1.6rem;
+  font-size: 2.6rem;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
 }
 
 .paragraph {
-  font-size: 1rem;
+  font-size: 2rem;
   font-family: "Raleway", sans-serif;
   font-weight: 400;
 }
 
 .small {
-  font-size: 0.8rem;
+  font-size: 1.8rem;
 }
 
 .button {
